# rta

./: .gitignore  ChangeLog  Makefile.am  README  TODO  bbvh-cuda-bench.sh  configure-for-secondary-gcc  configure.ac  dragon-param  dragon-param-rttest  nvcc-wrapper  rta.pc.in  sbvh-debug.ocl  sbvh.ocl  test.ocl
bbvh/: Makefile  Makefile.am  bbvh-node.h  bbvh.h  main.cpp
bbvh-cuda/: Makefile.am  bbvh-cuda-node.h  bbvh-cuda.h  kernels.cu  lbvh-kernels.cu  lbvh.h  main.cpp
bbvh-ocl/: Makefile  Makefile.am  bbvh-ocl-mod.cpp  bbvh-ocl.h
brute-force/: Makefile  Makefile.am  bruteforce.cpp  bruteforce.h
doc/: Makefile.am  asyuml.asy  bbvh-cuda-bench.2014.07.21.gtx780.org  classes.asy  doxyfile.in  doxygen_mainpage.h.in
exampleplugin/: configure.ac
exampleplugin-cuda/: Makefile.am  ax_gcc_version.m4  configure.ac  nvcc-wrapper
exampleplugin-cuda/src/: Makefile.am  bruteforce.cu  bruteforce.h  cmdline.h  main.cpp
exampleplugin/src/: Makefile.am  bruteforce.h  cmdline.cpp  main.cpp
librta/: #basic_types.h#  Makefile  Makefile.am  aabb.h  basic_types.h  cuda-kernels.cu  cuda-kernels.h  cuda-vec.h  cuda.cpp  cuda.h  image.h  intersect.h  librta.h  material.cpp  material.h  ocl.cpp  ocl.h  plugins.cpp  plugins.h  raytrav.h  rta-config.h  template-magic.h  tri.h
m4/: ax_enable_gdb.m4  ax_with_cuda.m4
messungen/: Makefile  messungen.tex
messungen/2012-07-04/: 2012-07-04--A--bbvh-dis.ply  2012-07-04--B--bbvh-cis.ply  2012-07-04--C--sbvh-bbvh-dis  2012-07-04--D--sbvh-bbvh-cis.ply  2012-07-04--E--sbvh-po-sbvh  bbvh-cis-masked-same-part.ply  bbvh-dis-masked-good-part.ply  cis-absolute.ply  dis-absolute.ply  dis-rel-to-cis.ply  kugeln.sh  messreihe.sh  sbvh-cis-rel-to-cis.ply  sbvh-dis-rel-to-dis.ply  sbvh-po-masked-bad-part.ply  sbvh-po-masked-good-part.ply  sbvh-po-rel-to-cis.ply
messungen/2012-07-08/: 2012-07-08--A--sbvh-oi-1-good-part.ply  2012-07-08--A--sbvh-oi-1.ply  2012-07-09--A--sbvh-oi-for-real.ply
rta/: #main.cpp#  Makefile  Makefile.am  Makefile.am.old  cmdline.cpp  cmdline.h  main.cpp  rta
sbvh/: Makefile  Makefile.am  sbvh.h  sbvh_mod.cpp
sbvh-ocl/: Makefile  Makefile.am  sbvh-ocl-mod.cpp  sbvh-ocl.h
sbvh/doc/: Makefile  sbvh.tex
sphs/: Makefile.am  cmdline.cpp  cmdline.h  color.cpp  color.h  main.cpp  sphere0.ply  sphere1.ply  sphere2.ply  view-sphs
src/: Makefile.am  aabb.h  basic_types.h  bbvh.h  cmdline.cpp  cmdline.h  image.h  intersect.h  main.cpp  raytrav.h  template-magic.h  tri.h  wall-timer.h
wrapper-for-librctest/: Makefile  Makefile.am  librctest.cpp  rct-cmdline.cpp  rct-cmdline.h
